spacing fixes
updates issues with things disappearing with changing window size

--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -3,6 +3,6 @@ page-login,
 }
 
 .topUp{
-
-    margin-top: -37%
+    margin-top: 20%;
+    margin-bottom: 35%
 }
